# cppCodeTemplate

./: README.md
codeTemplate/: CMakeLists.txt  Foo.cpp  Foo.h  FooTest.cpp  fooPython.py
codeTemplate/tests/: CMakeLists.txt  gtestsMain.cpp
fooRepo/: main.cpp  runCodeQsTests.sh  utils.cpp  utils.h
fooRepo/tests/: utilsTest.cpp
scripts/: gtest_installer.sh
scripts/createNewClass/: README.txt  copyFiles.py  main.py  makeCompilable.py  runCodeQsTests.sh  utils.py
